Implement find_pointer and set_at_pointer.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ cmake_minimum_required(VERSION 3.5)
 cmake_policy(SET CMP0167 NEW) # Boost
 
 project (dict)
-  find_package(Boost 1.85.0 COMPONENTS unit_test_framework REQUIRED)
+  find_package(Boost 1.85.0 COMPONENTS unit_test_framework log REQUIRED)
   find_package(yaml-cpp REQUIRED)
   add_definitions(-DBOOST_ALL_DYN_LINK) 
   enable_testing()
@@ -27,7 +27,7 @@ include_directories(include)
 add_library(DictLib STATIC     
     src/dict.cpp
   )
-  target_link_libraries(DictLib reflectcpp yaml-cpp::yaml-cpp)
+  target_link_libraries(DictLib reflectcpp yaml-cpp::yaml-cpp ${Boost_LOG_LIBRARY} )
 
 add_executable(DictTest test/dicttest.cpp)
   target_link_libraries(DictTest DictLib ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
