--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,12 +24,18 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 include_directories(include)
 
+if (APPLE)
+  set(YAML_LIB yaml-cpp::yaml-cpp)
+else ()
+  set(YAML_LIB yaml-cpp)
+endif ()
+
 add_library(DictLib STATIC     
     src/dict.cpp
     src/dictptr.cpp
     src/dictresult.cpp
   )
-  target_link_libraries(DictLib reflectcpp yaml-cpp::yaml-cpp ${Boost_LOG_LIBRARY} )
+  target_link_libraries(DictLib reflectcpp $(YAML_LIB) ${Boost_LOG_LIBRARY} )
 
 add_executable(DictTest test/dicttest.cpp)
   target_link_libraries(DictTest DictLib ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
